--- a/components/Bio.css
+++ b/components/Bio.css
@@ -1,17 +1,27 @@
+@font-face {
+    font-family: TT Firs Neue Trl;
+    src: url(src/assets/TTFirsNeueTrialRegular.ttf);
+}
+
 .sticky-image {
     border-radius: 50%;
-    width: 60%;
-  }
-
-.name {
-    font-size: 2em;
-  }
-  
-.title {
-    font-size: 1.5em;
+    width: 100%;
   }
 
 .intro-section {
     text-align: left;
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-left: 5%;
+    color: white;
+    font-family: TT Firs Neue Trl;
 }
+
+.name {
+    font-size: 3.5em;
+    line-height: 1;
+  }
+  
+.title {
+    font-size: 1.5em;
+    display: inline;
+  }
