--- a/components/Bio.css
+++ b/components/Bio.css
@@ -7,6 +7,7 @@
     text-align: left;
     margin-top: 100px;
     margin-left: 5%;
+    margin-right: 5%;
     color: white;
     font-family: TT Firs Neue Trl;
 }
