--- a/components/Bio.css
+++ b/components/Bio.css
@@ -12,6 +12,7 @@
     color: black;
     font-family: TT Firs Neue Trl;
     background-image: url("../src/assets/background2.png");
+    background-size: cover;
     background-position-x: center;
 }
 
